--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,12 @@
     <string name="title_recommendations">Recommendations</string>
     <string name="title_logout">Log out</string>
     <string name="title_edit_profile">Edit Profile</string>
-    <string name="title_activity_login">Sign in/Sign up</string>
+    <string name="title_activity_login">ParkPal Sign in/Sign up</string>
     <string name="title_placeholder">Placeholder</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
     <string name="text_or">or</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
