--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="prompt_dob">Birthday</string>
 
     <!-- Strings related to preferences -->
+    <string name="preferences">Preferences</string>
     <string name="prefs_kids">Kid Friendly</string>
     <string name="prefs_dogs">Dog Friendly</string>
     <string name="prefs_watersports">Watersports</string>
