--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="OpenWeatherApiKey">0cadf31092cc58df058ab3572067222b</string>
+    <string name="title_activity_park_details">ParkDetails</string>
+    <string name="title_activity_add_park_note">AddParkNoteActivity</string>
 </resources>
